--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@
 /**==================== Header Middle ======================**/
 
 .headerMiddle{
-    padding: 25px 0 28px;
+    padding: 25px 0px 0px;
 }
 .headerMRightinfo{}
 .singlehmib{
